fix suggestionCard styling on mobile

--- a/public/css/ChatStyle.css
+++ b/public/css/ChatStyle.css
@@ -84,8 +84,8 @@
     width: 300px;
     height: 55px;
     backdrop-filter: blur(30px);
-    background: linear-gradient(45deg, rgba(221, 249, 255, 0.9), rgba(229, 221, 255, 0.9), rgba(254, 231, 224, 0.9));
-    animation: gradient 10s ease infinite;
+    background: linear-gradient(45deg, rgba(221, 249, 255, 1), rgba(229, 221, 255, 1), rgba(254, 231, 224, 1));
+    animation: gradient 5s ease infinite;
     background-size: 400% 400%;
     border: 4px solid rgba(0, 0, 0, 0.15);
     border-radius: 40px;
@@ -237,7 +237,7 @@ button:disabled {
     flex-direction: column;
     gap: 8px; 
     max-width: 515px;
-    width: 100%;
+    width: 90%;
     background-color: #F5F5F5;
     border-radius: 40px;
     padding: 0px;
@@ -260,33 +260,24 @@ button:disabled {
 }
 
 .cardHeader {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;        
+    margin: 40px 40px 8px 40px;
 }
 
 .cardHeaderTitle {
-    margin: 0px;
-    padding: 0px;    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     font-weight: 900;
     letter-spacing: 0px;
-    text-overflow: ellipsis;
-    hyphens: auto;
+    line-height: 1.2;
     text-align: left;
-    width: 100%;
 }
 
 .cardDescription {
-    position: relative;
-    width: 100%;
-    background-color: #06AEEF;
+    margin: 0px 40px 40px 40px;
 }
 
 .cardDescriptionText {
     text-align: left;
-    width: 100%;
 }
 
 a {
